
AUTOMAKE_OPTIONS = nostdinc

dist_appl_DATA = \
	src/applications/aafire.desktop \
	src/applications/adie.desktop \
	src/applications/AdobeReader.desktop \
	src/applications/allin1.desktop \
	src/applications/AlsaMixer.app.desktop \
	src/applications/aumix.desktop \
	src/applications/bbpager.desktop \
	src/applications/bbrun.desktop \
	src/applications/blackbox.desktop \
	src/applications/bubblemon.desktop \
	src/applications/calculator.desktop \
	src/applications/cbatticon.desktop \
	src/applications/conky.desktop \
	src/applications/dhcpcd-gtk.desktop \
	src/applications/docker.desktop \
	src/applications/editres.desktop \
	src/applications/fbpanel.desktop \
	src/applications/fbrun.desktop \
	src/applications/fbxkb.desktop \
	src/applications/fluxbox.desktop \
	src/applications/ftmenu.desktop \
	src/applications/gmrun.desktop \
	src/applications/gtk2_prefs.desktop \
	src/applications/gtk-chtheme.desktop \
	src/applications/gtk-theme-switch2.desktop \
	src/applications/gvncviewer.desktop \
	src/applications/gxditview.desktop \
	src/applications/icewm.desktop \
	src/applications/lal.desktop \
	src/applications/lxde-logout.desktop \
	src/applications/lxinput.desktop \
	src/applications/lxpanelctl.desktop \
	src/applications/lxpanel.desktop \
	src/applications/notification-properties.desktop \
	src/applications/obxprop.desktop \
	src/applications/openbox.desktop \
	src/applications/pango-view.desktop \
	src/applications/peksystray.desktop \
	src/applications/piedock.desktop \
	src/applications/preferred-execute.desktop \
	src/applications/preferred-file-manager.desktop \
	src/applications/preferred-mail-reader.desktop \
	src/applications/preferred-terminal.desktop \
	src/applications/preferred-text-editor.desktop \
	src/applications/preferred-web-browser.desktop \
	src/applications/raktpdf.desktop \
	src/applications/retrovol.desktop \
	src/applications/sbxkb.desktop \
	src/applications/slock.desktop \
	src/applications/unclutter.desktop \
	src/applications/volume-app.desktop \
	src/applications/wmacpi.desktop \
	src/applications/wmagnify.desktop \
	src/applications/wmaker.desktop \
	src/applications/wmaker.inst.desktop \
	src/applications/wmappl-bin.desktop \
	src/applications/wmappl.desktop \
	src/applications/wmauda.desktop \
	src/applications/wmbatteries.desktop \
	src/applications/wmbattery.desktop \
	src/applications/wmbiff.desktop \
	src/applications/wmBinClock.desktop \
	src/applications/wmblob.desktop \
	src/applications/wmcalc-bin.desktop \
	src/applications/wmcalc.desktop \
	src/applications/wmCalClock.desktop \
	src/applications/wmCalClockKbd.desktop \
	src/applications/wmcliphist.desktop \
	src/applications/wmclock.desktop \
	src/applications/wmclockmon-cal.desktop \
	src/applications/wmclockmon-config.desktop \
	src/applications/wmclockmon.desktop \
	src/applications/wmcore.desktop \
	src/applications/wmcpu.desktop \
	src/applications/wmcpuload.desktop \
	src/applications/wmcpumon.desktop \
	src/applications/wmctrl.desktop \
	src/applications/wmdiskmon.desktop \
	src/applications/wmf2eps.desktop \
	src/applications/wmf2fig.desktop \
	src/applications/wmf2gd.desktop \
	src/applications/wmf2svg.desktop \
	src/applications/wmf2x.desktop \
	src/applications/wmgenmenu.desktop \
	src/applications/wmmail.desktop \
	src/applications/wmmenugen.desktop \
	src/applications/wmmixer.desktop \
	src/applications/wmnd.desktop \
	src/applications/wmnet.desktop \
	src/applications/wm-oldmenu2new.desktop \
	src/applications/wmsetbg.desktop \
	src/applications/wmsmixer.desktop \
	src/applications/wmsysmon.desktop \
	src/applications/wmsystemtray.desktop \
	src/applications/wmsystray.desktop \
	src/applications/wmtime.desktop \
	src/applications/wmtimer.desktop \
	src/applications/wmtrash.desktop \
	src/applications/wmudmount.desktop \
	src/applications/wmwave.desktop \
	src/applications/wmWeather.desktop \
	src/applications/wmweather+.desktop \
	src/applications/wmwifi.desktop \
	src/applications/xcalc.desktop \
	src/applications/xclipboard.desktop \
	src/applications/xclock.desktop \
	src/applications/xcolorsel.desktop \
	src/applications/xconsole.desktop \
	src/applications/xde-input.desktop \
	src/applications/xde-logout.desktop \
	src/applications/xde-panel.desktop \
	src/applications/xde-run.desktop \
	src/applications/xditview.desktop \
	src/applications/xdpyinfo.desktop \
	src/applications/xdvi.desktop \
	src/applications/xev.desktop \
	src/applications/xeyes.desktop \
	src/applications/xfontsel.desktop \
	src/applications/xinput.desktop \
	src/applications/xkbvleds.desktop \
	src/applications/xkbwatch.desktop \
	src/applications/xkill.desktop \
	src/applications/xlsatoms.desktop \
	src/applications/xlsclients.desktop \
	src/applications/xmag.desktop \
	src/applications/xman.desktop \
	src/applications/xmodmap.desktop \
	src/applications/xpdf.desktop \
	src/applications/xprop.desktop \
	src/applications/xrandr.desktop \
	src/applications/xrefresh.desktop \
	src/applications/xrestop.desktop \
	src/applications/xset.desktop \
	src/applications/xvidtune.desktop \
	src/applications/xvinfo.desktop \
	src/applications/xwd.desktop \
	src/applications/xwininfo.desktop \
	src/applications/xwud.desktop \
	src/applications/zat.desktop

dist_sess_DATA = \
	src/xsessions/2bwm.desktop \
	src/xsessions/adwm.desktop \
	src/xsessions/aewm.desktop \
	src/xsessions/AfterStep.desktop \
	src/xsessions/awesome.desktop \
	src/xsessions/blackbox.desktop \
	src/xsessions/bspwm.desktop \
	src/xsessions/ctwm.desktop \
	src/xsessions/cwm.desktop \
	src/xsessions/dwm.desktop \
	src/xsessions/e16-gnome2-session.desktop \
	src/xsessions/e16-gnome3-session.desktop \
	src/xsessions/e16-kde-session.desktop \
	src/xsessions/e16-session.desktop \
	src/xsessions/echinus.desktop \
	src/xsessions/ede.desktop \
	src/xsessions/evilwm.desktop \
	src/xsessions/failsafewm.desktop \
	src/xsessions/fluxbox.desktop \
	src/xsessions/flwm.desktop \
	src/xsessions/Fvwm1.desktop \
	src/xsessions/fvwm-crystal.desktop \
	src/xsessions/Fvwm.desktop \
	src/xsessions/fvwm.desktop \
	src/xsessions/gnome.desktop \
	src/xsessions/herbstluftwm.desktop \
	src/xsessions/i3.desktop \
	src/xsessions/i3-with-shmlog.desktop \
	src/xsessions/icewm.desktop \
	src/xsessions/icewm-session.desktop \
	src/xsessions/Jwm.desktop \
	src/xsessions/LXDE.desktop \
	src/xsessions/metacity.desktop \
	src/xsessions/mutter.desktop \
	src/xsessions/mwm.desktop \
	src/xsessions/openbox.desktop \
	src/xsessions/openbox-gnome.desktop \
	src/xsessions/openbox-kde.desktop \
	src/xsessions/pawm.desktop \
	src/xsessions/pekwm.desktop \
	src/xsessions/spectrwm.desktop \
	src/xsessions/ssh.desktop \
	src/xsessions/twm.desktop \
	src/xsessions/uwm.desktop \
	src/xsessions/velox.desktop \
	src/xsessions/vtwm.desktop \
	src/xsessions/waimea.desktop \
	src/xsessions/wind.desktop \
	src/xsessions/windwm.desktop \
	src/xsessions/wmaker.desktop \
	src/xsessions/wmii.desktop \
	src/xsessions/xdwm.desktop \
	src/xsessions/xfce.desktop \
	src/xsessions/yeahwm.desktop

dist_auto_DATA = \
	src/autostart/bbrun.desktop \
	src/autostart/cbatticon.desktop \
	src/autostart/compton.desktop \
	src/autostart/compton-fluxbox.desktop \
	src/autostart/dhcpcd-gtk.desktop \
	src/autostart/docker.desktop \
	src/autostart/gatotray.desktop \
	src/autostart/icewmtray.desktop \
	src/autostart/idesk.desktop \
	src/autostart/lxpanel.desktop \
	src/autostart/menutray.desktop \
	src/autostart/nm-applet.desktop \
	src/autostart/pnmixer.desktop \
	src/autostart/remmina-applet.desktop \
	src/autostart/retrovol.desktop \
	src/autostart/smproxy.desktop \
	src/autostart/wmappl.desktop \
	src/autostart/wmbattery.desktop \
	src/autostart/wmblob.desktop \
	src/autostart/wmCalClock.desktop \
	src/autostart/wmclockmon.desktop \
	src/autostart/wmcore.desktop \
	src/autostart/wmcpuload.desktop \
	src/autostart/wmmixer.desktop \
	src/autostart/wmnd.desktop \
	src/autostart/wmnet.desktop \
	src/autostart/wmsysmon.desktop \
	src/autostart/wmsystemtray.desktop \
	src/autostart/wmtimer.desktop \
	src/autostart/wmWeather.desktop \
	src/autostart/wmweather+.desktop \
	src/autostart/xde-input.desktop \
	src/autostart/xde-panel.desktop \
	src/autostart/xde-setbg.desktop

dist_menu_DATA = \
	src/menus/unexicon-applications.menu \
	src/menus/xde-applications.menu

dist_dirs_DATA = \
	src/desktop-directories/dockapps.directory \
	src/desktop-directories/xde-accessibility.directory \
	src/desktop-directories/xde-accessories.directory \
	src/desktop-directories/xde-applications.directory \
	src/desktop-directories/xde-archlinux.directory \
	src/desktop-directories/xde-development.directory \
	src/desktop-directories/xde-dockapps.directory \
	src/desktop-directories/xde-education.directory \
	src/desktop-directories/xde-games.directory \
	src/desktop-directories/xde-gnome-webapplications.directory \
	src/desktop-directories/xde-graphics.directory \
	src/desktop-directories/xde-internet.directory \
	src/desktop-directories/xde-multimedia.directory \
	src/desktop-directories/xde-office.directory \
	src/desktop-directories/xde-other.directory \
	src/desktop-directories/xde-science.directory \
	src/desktop-directories/xde-settings.directory \
	src/desktop-directories/xde-system-tools.directory \
	src/desktop-directories/xde-x11-tools.directory \
	src/desktop-directories/X-X11-Tools.directory

dist_back_DATA = \
	src/fallback/abiword.desktop \
	src/fallback/about-mageia.desktop \
	src/fallback/about-mandriva.desktop \
	src/fallback/about-this-computer.desktop \
	src/fallback/abstractile.desktop \
	src/fallback/activate-screensaver-(next).desktop \
	src/fallback/activate-screensaver-(previous).desktop \
	src/fallback/activate-screensaver-(random).desktop \
	src/fallback/alacarte.desktop \
	src/fallback/alltray.desktop \
	src/fallback/alsamixer.desktop \
	src/fallback/aptitude-(terminal).desktop \
	src/fallback/asclock.desktop \
	src/fallback/asmon.desktop \
	src/fallback/aswallpaper.desktop \
	src/fallback/aterm.desktop \
	src/fallback/at-properties.desktop \
	src/fallback/audacious2.desktop \
	src/fallback/audacious2-gtkui.desktop \
	src/fallback/audacious.desktop \
	src/fallback/authconfig.desktop \
	src/fallback/baobab.desktop \
	src/fallback/base.desktop \
	src/fallback/bash.desktop \
	src/fallback/bbkeys.desktop \
	src/fallback/bbpager.desktop \
	src/fallback/bbrun.desktop \
	src/fallback/bc.desktop \
	src/fallback/beanshell-(text).desktop \
	src/fallback/beanshell-(windowed).desktop \
	src/fallback/blueman-manager.desktop \
	src/fallback/bluetooth-properties.desktop \
	src/fallback/bluetooth-sendto.desktop \
	src/fallback/bluetooth-wizard.desktop \
	src/fallback/bme.desktop \
	src/fallback/bonobo-browser.desktop \
	src/fallback/brasero-copy-medium.desktop \
	src/fallback/brasero.desktop \
	src/fallback/brasero-nautilus.desktop \
	src/fallback/bug-buddy.desktop \
	src/fallback/calc.desktop \
	src/fallback/calcoo.desktop \
	src/fallback/caribou.desktop \
	src/fallback/cddb-slave.desktop \
	src/fallback/character-map.desktop \
	src/fallback/chbg.desktop \
	src/fallback/cheese.desktop \
	src/fallback/chess-net.desktop \
	src/fallback/chromium-browser.desktop \
	src/fallback/clementine.desktop \
	src/fallback/CMake.desktop \
	src/fallback/codeina.desktop \
	src/fallback/compiz-gtk.desktop \
	src/fallback/cosmos-slideshow.desktop \
	src/fallback/cups.desktop \
	src/fallback/cwaves.desktop \
	src/fallback/dash.desktop \
	src/fallback/dasher.desktop \
	src/fallback/dasher-text-entry.desktop \
	src/fallback/dc.desktop \
	src/fallback/debian-floaters.desktop \
	src/fallback/debian-task-selector.desktop \
	src/fallback/deco.desktop \
	src/fallback/default-applications.desktop \
	src/fallback/default.desktop \
	src/fallback/deja-dup.desktop \
	src/fallback/deja-dup-preferences.desktop \
	src/fallback/demo-screen-hacks.desktop \
	src/fallback/desktop-effects.desktop \
	src/fallback/dia.desktop \
	src/fallback/diakonos.desktop \
	src/fallback/disable-xscreensaver.desktop \
	src/fallback/display.desktop \
	src/fallback/display-properties.desktop \
	src/fallback/distort.desktop \
	src/fallback/docker.desktop \
	src/fallback/dogtail-recorder.desktop \
	src/fallback/drakbackup.desktop \
	src/fallback/draknetcenter.desktop \
	src/fallback/draw.desktop \
	src/fallback/eboard.desktop \
	src/fallback/eclipse.desktop \
	src/fallback/eekboard.desktop \
	src/fallback/ekiga.desktop \
	src/fallback/elvis.desktop \
	src/fallback/emacs.desktop \
	src/fallback/empathy-accounts.desktop \
	src/fallback/empathy.desktop \
	src/fallback/enable-xscreensaver.desktop \
	src/fallback/eog.desktop \
	src/fallback/epiphany.desktop \
	src/fallback/epiphany-web-browser.desktop \
	src/fallback/esc.desktop \
	src/fallback/eterm.desktop \
	src/fallback/evince.desktop \
	src/fallback/evolution.desktop \
	src/fallback/evolution-mail.desktop \
	src/fallback/evolution-settings.desktop \
	src/fallback/exo-preferred-applications.desktop \
	src/fallback/eye-of-gnome.desktop \
	src/fallback/fedora-abrt.desktop \
	src/fallback/fedora-empathy-accounts.desktop \
	src/fallback/fedora-empathy.desktop \
	src/fallback/fedora-glade.desktop \
	src/fallback/fedora-im-chooser.desktop \
	src/fallback/fedora-iok.desktop \
	src/fallback/fedora-jconsole.desktop \
	src/fallback/fedora-policytool.desktop \
	src/fallback/fedora-release-notes.desktop \
	src/fallback/fedora-release-notesX.desktop \
	src/fallback/fedora-seahorse.desktop \
	src/fallback/fedora-sniff.desktop \
	src/fallback/fedora-xdvi.desktop \
	src/fallback/fedora-xsane.desktop \
	src/fallback/fiberlamp.desktop \
	src/fallback/file-roller.desktop \
	src/fallback/filezilla.desktop \
	src/fallback/firefox.desktop \
	src/fallback/flphoto.desktop \
	src/fallback/footlogo-floaters.desktop \
	src/fallback/freecell.desktop \
	src/fallback/free-i.c.s..desktop \
	src/fallback/f-spot.desktop \
	src/fallback/f-spot-import.desktop \
	src/fallback/f-spot-screensaver.desktop \
	src/fallback/f-spot-view.desktop \
	src/fallback/fuzzyflakes.desktop \
	src/fallback/fvwm.desktop \
	src/fallback/galaxy.desktop \
	src/fallback/gcalctool.desktop \
	src/fallback/gcm-import.desktop \
	src/fallback/gcm-prefs.desktop \
	src/fallback/gconf-editor.desktop \
	src/fallback/gdebi.desktop \
	src/fallback/gdm-flexiserver.desktop \
	src/fallback/gdmflexiserver.desktop \
	src/fallback/gdmflexiserver-xnest.desktop \
	src/fallback/gdmphotosetup.desktop \
	src/fallback/gdmsetup.desktop \
	src/fallback/gedit.desktop \
	src/fallback/gftp.desktop \
	src/fallback/ggl-qt.desktop \
	src/fallback/ghostview.desktop \
	src/fallback/gimp.desktop \
	src/fallback/gkbd-keyboard-display.desktop \
	src/fallback/gksu.desktop \
	src/fallback/gl-chess.desktop \
	src/fallback/glchess.desktop \
	src/fallback/glines.desktop \
	src/fallback/gmenu-simple-editor.desktop \
	src/fallback/gmix-(gnome-2.0-mixer).desktop \
	src/fallback/gnash.desktop \
	src/fallback/gnect.desktop \
	src/fallback/gnibbles.desktop \
	src/fallback/gnobots2.desktop \
	src/fallback/gnome-about.desktop \
	src/fallback/gnome-about-me.desktop \
	src/fallback/gnome-accessibility-keyboard.desktop \
	src/fallback/gnome-appearance-properties.desktop \
	src/fallback/gnome-at-properties.desktop \
	src/fallback/gnome-background.desktop \
	src/fallback/gnome-background-panel.desktop \
	src/fallback/gnome-baobab.desktop \
	src/fallback/gnome-blackjack.desktop \
	src/fallback/gnome-bug-buddy.desktop \
	src/fallback/gnomecc.desktop \
	src/fallback/gnome-cd.desktop \
	src/fallback/gnome-control-center.desktop \
	src/fallback/gnome-datetime-panel.desktop \
	src/fallback/gnome-default-applications.desktop \
	src/fallback/gnome-default-printer.desktop \
	src/fallback/gnome-devhelp.desktop \
	src/fallback/gnome-dictionary.desktop \
	src/fallback/gnome-display-panel.desktop \
	src/fallback/gnome-display-properties.desktop \
	src/fallback/gnome-ekiga.desktop \
	src/fallback/gnome-eog.desktop \
	src/fallback/gnome-file-roller.desktop \
	src/fallback/gnome-font-properties.desktop \
	src/fallback/gnome-font-viewer.desktop \
	src/fallback/gnome-freecell.desktop \
	src/fallback/gnome-gataxx.desktop \
	src/fallback/gnome-gcalctool.desktop \
	src/fallback/gnome-gdmphotosetup.desktop \
	src/fallback/gnome-gdmsetup.desktop \
	src/fallback/gnome-gedit.desktop \
	src/fallback/gnome-gfloppy.desktop \
	src/fallback/gnome-glade-2.desktop \
	src/fallback/gnome-glines.desktop \
	src/fallback/gnome-gnect.desktop \
	src/fallback/gnome-gnibbles.desktop \
	src/fallback/gnome-gnobots2.desktop \
	src/fallback/gnome-gnomine.desktop \
	src/fallback/gnome-gnotravex.desktop \
	src/fallback/gnome-gnotski.desktop \
	src/fallback/gnome-gswitchit-plugins.desktop \
	src/fallback/gnome-gtali.desktop \
	src/fallback/gnome-gtk-theme-selector.desktop \
	src/fallback/gnome-gucharmap.desktop \
	src/fallback/gnome-gyahtzee.desktop \
	src/fallback/gnome-iagno.desktop \
	src/fallback/gnome-info-panel.desktop \
	src/fallback/gnome-invest-chart.desktop \
	src/fallback/gnome-keybinding.desktop \
	src/fallback/gnome-keyboard.desktop \
	src/fallback/gnome-keyboard-panel.desktop \
	src/fallback/gnome-keyring-prompt.desktop \
	src/fallback/gnome-klotski.desktop \
	src/fallback/gnome-lines.desktop \
	src/fallback/gnome-log-viewer.desktop \
	src/fallback/gnome-mahjongg.desktop \
	src/fallback/gnome-media-panel.desktop \
	src/fallback/gnome-mouse-panel.desktop \
	src/fallback/gnome-nautilus-autorun-software.desktop \
	src/fallback/gnome-nautilus-browser.desktop \
	src/fallback/gnome-nautilus-computer.desktop \
	src/fallback/gnome-nautilus.desktop \
	src/fallback/gnome-nautilus-file-management-properties.desktop \
	src/fallback/gnome-nautilus-folder-handler.desktop \
	src/fallback/gnome-nautilus-home.desktop \
	src/fallback/gnome-nettool.desktop \
	src/fallback/gnome-network-panel.desktop \
	src/fallback/gnome-network-preferences.desktop \
	src/fallback/gnome-network-properties.desktop \
	src/fallback/gnome-network-scheme.desktop \
	src/fallback/gnome-network-tool.desktop \
	src/fallback/gnome-panel.desktop \
	src/fallback/gnome-power-panel.desktop \
	src/fallback/gnome-power-preferences.desktop \
	src/fallback/gnome-power-statistics.desktop \
	src/fallback/gnome-printers-panel.desktop \
	src/fallback/gnome-region-panel.desktop \
	src/fallback/gnome-robots.desktop \
	src/fallback/gnome-sabayon.desktop \
	src/fallback/gnome-same-gnome.desktop \
	src/fallback/gnome-screen-panel.desktop \
	src/fallback/gnome-screensaver-preferences.desktop \
	src/fallback/gnome-screenshot.desktop \
	src/fallback/gnome-screenshot-tool.desktop \
	src/fallback/gnome-search-tool.desktop \
	src/fallback/gnome-session-properties.desktop \
	src/fallback/gnome-settings-mouse.desktop \
	src/fallback/gnome-settings-sound.desktop \
	src/fallback/gnome-shell.desktop \
	src/fallback/gnome-sol.desktop \
	src/fallback/gnome-solitaire-games.desktop \
	src/fallback/gnome-sound-panel.desktop \
	src/fallback/gnome-sound-recorder.desktop \
	src/fallback/gnome-sudoku.desktop \
	src/fallback/gnome-swell-foop.desktop \
	src/fallback/gnome-system-log.desktop \
	src/fallback/gnome-system-monitor.desktop \
	src/fallback/gnome-terminal.desktop \
	src/fallback/gnome-tetravex.desktop \
	src/fallback/gnome-theme-installer.desktop \
	src/fallback/gnome-themus-theme-applier.desktop \
	src/fallback/gnome-ui-properties.desktop \
	src/fallback/gnome-universal-access-panel.desktop \
	src/fallback/gnome-user-accounts-panel.desktop \
	src/fallback/gnome-user-share-properties.desktop \
	src/fallback/gnome-vino-preferences.desktop \
	src/fallback/gnome-volume-control.desktop \
	src/fallback/gnome-volume-properties.desktop \
	src/fallback/gnome-window-properties.desktop \
	src/fallback/gnome-wm.desktop \
	src/fallback/gnome-yelp.desktop \
	src/fallback/gnomine.desktop \
	src/fallback/gnote.desktop \
	src/fallback/gnotravex.desktop \
	src/fallback/gnotski.desktop \
	src/fallback/gnuchess.desktop \
	src/fallback/gnumeric.desktop \
	src/fallback/gnuplot.desktop \
	src/fallback/gok.desktop \
	src/fallback/gpa.desktop \
	src/fallback/gpicview.desktop \
	src/fallback/gpilotd-control-applet.desktop \
	src/fallback/gpk-application.desktop \
	src/fallback/gpk-dbus-service.desktop \
	src/fallback/gpk-distro-upgrade.desktop \
	src/fallback/gpk-install-catalog.desktop \
	src/fallback/gpk-install-file.desktop \
	src/fallback/gpk-install-local-file.desktop \
	src/fallback/gpk-log.desktop \
	src/fallback/gpk-prefs.desktop \
	src/fallback/gpk-service-pack.desktop \
	src/fallback/gpk-update-viewer.desktop \
	src/fallback/grecord-(gnome-2.0-recorder).desktop \
	src/fallback/gsetroot.desktop \
	src/fallback/gstreamer-properties.desktop \
	src/fallback/gtali.desktop \
	src/fallback/gthumb.desktop \
	src/fallback/gthumb-import.desktop \
	src/fallback/gthumb-importer.desktop \
	src/fallback/gtksubtitler.desktop \
	src/fallback/gucharmap.desktop \
	src/fallback/gurpmi.addmedia.desktop \
	src/fallback/gv.desktop \
	src/fallback/gvim.desktop \
	src/fallback/gwcommand.desktop \
	src/fallback/hamster-standalone.desktop \
	src/fallback/harddrake.desktop \
	src/fallback/homebank.desktop \
	src/fallback/HP-hplip.desktop \
	src/fallback/hplip.desktop \
	src/fallback/hplj1020.desktop \
	src/fallback/iagno.desktop \
	src/fallback/ia-ora-blue-slideshow.desktop \
	src/fallback/ia-ora-free-slideshow.desktop \
	src/fallback/ia-ora-gray-slideshow.desktop \
	src/fallback/ia-ora-one-slideshow.desktop \
	src/fallback/ia-ora-orange-slideshow.desktop \
	src/fallback/ia-ora-slideshow.desktop \
	src/fallback/ibus.desktop \
	src/fallback/ibus-setup.desktop \
	src/fallback/iceweasel.desktop \
	src/fallback/imagemagick.desktop \
	src/fallback/im-chooser.desktop \
	src/fallback/impress.desktop \
	src/fallback/info.desktop \
	src/fallback/inkscape.desktop \
	src/fallback/internet-chess-club.desktop \
	src/fallback/itweb-settings.desktop \
	src/fallback/jconsole.desktop \
	src/fallback/jed.desktop \
	src/fallback/joe.desktop \
	src/fallback/jpackage-chainsaw.desktop \
	src/fallback/jpackage-logfactor5.desktop \
	src/fallback/keybinding.desktop \
	src/fallback/keyboard.desktop \
	src/fallback/Kino.desktop \
	src/fallback/leafpad.desktop \
	src/fallback/le.desktop \
	src/fallback/libfm-pref-apps.desktop \
	src/fallback/libreoffice-calc.desktop \
	src/fallback/libreoffice-draw.desktop \
	src/fallback/libreoffice-impress.desktop \
	src/fallback/libreoffice-math.desktop \
	src/fallback/libreoffice-startcenter.desktop \
	src/fallback/libreoffice-writer.desktop \
	src/fallback/liferea.desktop \
	src/fallback/lightsoff.desktop \
	src/fallback/lock-screen-(xscreensaver).desktop \
	src/fallback/lxappearance.desktop \
	src/fallback/lxde-logout.desktop \
	src/fallback/lxrandr.desktop \
	src/fallback/lxtask.desktop \
	src/fallback/lxterminal.desktop \
	src/fallback/m6502.desktop \
	src/fallback/mageia-drakconf.desktop \
	src/fallback/mageia-grip.desktop \
	src/fallback/mageia-gurpmi.desktop \
	src/fallback/mageia-tkcvs.desktop \
	src/fallback/mageia-tkdiff.desktop \
	src/fallback/mageiaupdate.desktop \
	src/fallback/mageia-userdrake.desktop \
	src/fallback/mageia-xterm.desktop \
	src/fallback/mahjongg.desktop \
	src/fallback/manage-print-jobs.desktop \
	src/fallback/mandriva-avidemux-gtk.desktop \
	src/fallback/mandriva-doc-Drakxtools-Guide-en.desktop \
	src/fallback/mandriva-doc-Introducing-en.desktop \
	src/fallback/mandriva-doc-Mastering-Manual-en.desktop \
	src/fallback/mandriva-drakconf.desktop \
	src/fallback/mandriva-drakfax.desktop \
	src/fallback/mandriva-drakmenustyle.desktop \
	src/fallback/mandriva-drakstats.desktop \
	src/fallback/mandriva-gpilot-install-file.desktop \
	src/fallback/mandriva-gtkam.desktop \
	src/fallback/mandriva-gurpmi.desktop \
	src/fallback/mandriva-headalign.desktop \
	src/fallback/mandriva-headclean.desktop \
	src/fallback/mandriva-hidecartridges.desktop \
	src/fallback/mandriva-mozilla-thunderbird.desktop \
	src/fallback/mandriva-mtink.desktop \
	src/fallback/mandriva-rfbdrake.desktop \
	src/fallback/mandriva-rox.desktop \
	src/fallback/mandriva-rxvt.desktop \
	src/fallback/mandriva-showcartridges.desktop \
	src/fallback/mandriva-tightvnc.desktop \
	src/fallback/mandrivaupdate.desktop \
	src/fallback/mandriva-userdrake.desktop \
	src/fallback/mandriva-xkill.desktop \
	src/fallback/mandriva-xterm.desktop \
	src/fallback/mandriva-z42tool.desktop \
	src/fallback/math.desktop \
	src/fallback/mc.desktop \
	src/fallback/mcedit.desktop \
	src/fallback/metaballs.desktop \
	src/fallback/metacity.desktop \
	src/fallback/mined.desktop \
	src/fallback/mixer.app.desktop \
	src/fallback/mlterm.desktop \
	src/fallback/mmc-wizard.desktop \
	src/fallback/mount-archive.desktop \
	src/fallback/mousepad.desktop \
	src/fallback/mozilla-firefox.desktop \
	src/fallback/mozilla-thunderbird.desktop \
	src/fallback/mplayer.desktop \
	src/fallback/mutt.desktop \
	src/fallback/mutter.desktop \
	src/fallback/my-default-printer.desktop \
	src/fallback/nano.desktop \
	src/fallback/nautilus-autorun-software.desktop \
	src/fallback/nautilus-browser.desktop \
	src/fallback/nautilus-cd-burner.desktop \
	src/fallback/nautilus-cd-burner-open-iso.desktop \
	src/fallback/nautilus-computer.desktop \
	src/fallback/nautilus.desktop \
	src/fallback/nautilus-file-management-properties.desktop \
	src/fallback/nautilus-folder-handler.desktop \
	src/fallback/nautilus-home.desktop \
	src/fallback/nautilus-search.desktop \
	src/fallback/nedit.desktop \
	src/fallback/net_applet.desktop \
	src/fallback/network-admin.desktop \
	src/fallback/network.desktop \
	src/fallback/network-scheme.desktop \
	src/fallback/net-xfig.desktop \
	src/fallback/nm-applet.desktop \
	src/fallback/nm-connection-editor.desktop \
	src/fallback/nm-vpnc-auth-dialog.desktop \
	src/fallback/notification-daemon.desktop \
	src/fallback/notification-properties.desktop \
	src/fallback/notification-settings.desktop \
	src/fallback/nvi.desktop \
	src/fallback/obconf.desktop \
	src/fallback/oclock.desktop \
	src/fallback/ooo-extension-manager.desktop \
	src/fallback/openbox.desktop \
	src/fallback/openjdk-6-policytool.desktop \
	src/fallback/openoffice.org-1.9-calc.desktop \
	src/fallback/openoffice.org-1.9-draw.desktop \
	src/fallback/openoffice.org-1.9-impress.desktop \
	src/fallback/openoffice.org-1.9-math.desktop \
	src/fallback/openoffice.org-1.9-writer.desktop \
	src/fallback/openoffice.org-base.desktop \
	src/fallback/openoffice.org-calc.desktop \
	src/fallback/openoffice.org-draw.desktop \
	src/fallback/openoffice.org-impress.desktop \
	src/fallback/openoffice.org-math.desktop \
	src/fallback/openoffice.org-startcenter.desktop \
	src/fallback/openoffice.org-writer.desktop \
	src/fallback/openshot.desktop \
	src/fallback/orca.desktop \
	src/fallback/palimpsest.desktop \
	src/fallback/pan.desktop \
	src/fallback/paprefs.desktop \
	src/fallback/pavucontrol.desktop \
	src/fallback/pcmanfm.desktop \
	src/fallback/penrose.desktop \
	src/fallback/personal-slideshow.desktop \
	src/fallback/pico.desktop \
	src/fallback/pidgin.desktop \
	src/fallback/pirut.desktop \
	src/fallback/pitivi.desktop \
	src/fallback/planner.desktop \
	src/fallback/policytool.desktop \
	src/fallback/polkit-gnome-authorization.desktop \
	src/fallback/ponoff.desktop \
	src/fallback/popsquares.desktop \
	src/fallback/procinfo.desktop \
	src/fallback/pstree.desktop \
	src/fallback/pup.desktop \
	src/fallback/python2.6.desktop \
	src/fallback/python-coherence-applet.desktop \
	src/fallback/python-(v2.6).desktop \
	src/fallback/qt4-designer.desktop \
	src/fallback/qt4-linguist.desktop \
	src/fallback/qt4-qtconfig.desktop \
	src/fallback/qt-assistant3.desktop \
	src/fallback/qt-linguist3.desktop \
	src/fallback/quadrapassel.desktop \
	src/fallback/redhat-abrt.desktop \
	src/fallback/redhat-authconfig.desktop \
	src/fallback/redhat-hal-device-manager.desktop \
	src/fallback/redhat-hwbrowser.desktop \
	src/fallback/redhat-manage-print-jobs.desktop \
	src/fallback/redhat-my-default-printer.desktop \
	src/fallback/redhat-neat-control.desktop \
	src/fallback/redhat-neat.desktop \
	src/fallback/redhat-system-config-printer.desktop \
	src/fallback/redhat-userinfo.desktop \
	src/fallback/redhat-usermount.desktop \
	src/fallback/redhat-userpasswd.desktop \
	src/fallback/redhat-wireshark.desktop \
	src/fallback/reinitialize-xscreensaver.desktop \
	src/fallback/remmina.desktop \
	src/fallback/reportbug.desktop \
	src/fallback/reportbug-(gtk+).desktop \
	src/fallback/rhn_register.desktop \
	src/fallback/rhythmbox.desktop \
	src/fallback/rhythmbox-device.desktop \
	src/fallback/ripples.desktop \
	src/fallback/roller.desktop \
	src/fallback/row.desktop \
	src/fallback/rox-filer.desktop \
	src/fallback/rpmdrake-browse-only.desktop \
	src/fallback/rpmdrake.desktop \
	src/fallback/rpmdrake-sources.desktop \
	src/fallback/rxvt.desktop \
	src/fallback/scavenger.desktop \
	src/fallback/scim.desktop \
	src/fallback/scim-setup.desktop \
	src/fallback/screensaver-preferences.desktop \
	src/fallback/scribus.desktop \
	src/fallback/seahorse.desktop \
	src/fallback/seahorse-pgp-encrypted.desktop \
	src/fallback/seahorse-pgp-keys.desktop \
	src/fallback/seahorse-pgp-preferences.desktop \
	src/fallback/seahorse-pgp-signature.desktop \
	src/fallback/seamonkey.desktop \
	src/fallback/seamonkey-mail.desktop \
	src/fallback/services-admin.desktop \
	src/fallback/services.desktop \
	src/fallback/session-properties.desktop \
	src/fallback/setedit.desktop \
	src/fallback/setroubleshoot.desktop \
	src/fallback/shadebobs.desktop \
	src/fallback/shares-admin.desktop \
	src/fallback/shares.desktop \
	src/fallback/sh.desktop \
	src/fallback/shotwell.desktop \
	src/fallback/shotwell-viewer.desktop \
	src/fallback/simple-scan.desktop \
	src/fallback/slidescreen.desktop \
	src/fallback/smplayer.desktop \
	src/fallback/smplayer_enqueue.desktop \
	src/fallback/software-properties.desktop \
	src/fallback/sol.desktop \
	src/fallback/sound-juicer.desktop \
	src/fallback/stalonetray.desktop \
	src/fallback/startcenter.desktop \
	src/fallback/swell-foop.desktop \
	src/fallback/swirl.desktop \
	src/fallback/synaptic.desktop \
	src/fallback/synaptic-package-manager.desktop \
	src/fallback/sysprof.desktop \
	src/fallback/system-config-boot.desktop \
	src/fallback/system-config-date.desktop \
	src/fallback/system-config-display.desktop \
	src/fallback/system-config-firewall.desktop \
	src/fallback/system-config-httpd.desktop \
	src/fallback/system-config-kdump.desktop \
	src/fallback/system-config-keyboard.desktop \
	src/fallback/system-config-language.desktop \
	src/fallback/system-config-lvm.desktop \
	src/fallback/system-config-nfs.desktop \
	src/fallback/system-config-printer.desktop \
	src/fallback/system-config-rootpassword.desktop \
	src/fallback/system-config-samba.desktop \
	src/fallback/system-config-securitylevel.desktop \
	src/fallback/system-config-services.desktop \
	src/fallback/system-config-soundcard.desktop \
	src/fallback/system-config-users.desktop \
	src/fallback/system-install-packages.desktop \
	src/fallback/system-wacomcpl.desktop \
	src/fallback/tclsh8.4.desktop \
	src/fallback/telnet.desktop \
	src/fallback/template.desktop \
	src/fallback/terminal-as-root-(gksu).desktop \
	src/fallback/Terminal.desktop \
	src/fallback/tetex-xdvi.desktop \
	src/fallback/texconfig.desktop \
	src/fallback/texdoctk.desktop \
	src/fallback/the-gimp.desktop \
	src/fallback/the-gnome-onscreen-keyboard.desktop \
	src/fallback/Thunar-bulk-rename.desktop \
	src/fallback/Thunar.desktop \
	src/fallback/Thunar-folder-handler.desktop \
	src/fallback/thunar-settings.desktop \
	src/fallback/thunar-volman-settings.desktop \
	src/fallback/time-admin.desktop \
	src/fallback/time.desktop \
	src/fallback/tkwish8.4.desktop \
	src/fallback/tomboy.desktop \
	src/fallback/top.desktop \
	src/fallback/totem.desktop \
	src/fallback/tracker-miner-applications.desktop \
	src/fallback/tracker-preferences.desktop \
	src/fallback/tracker-search-tool.desktop \
	src/fallback/transmission-bittorrent-client-(gtk).desktop \
	src/fallback/transmission.desktop \
	src/fallback/transmission-gtk.desktop \
	src/fallback/twisted-ssh-client.desktop \
	src/fallback/unbranded-software-center.desktop \
	src/fallback/update-manager.desktop \
	src/fallback/urxvt.desktop \
	src/fallback/user-accounts-admin.desktop \
	src/fallback/users.desktop \
	src/fallback/vi.desktop \
	src/fallback/vile.desktop \
	src/fallback/vim.desktop \
	src/fallback/vinagre.desktop \
	src/fallback/vinagre-file.desktop \
	src/fallback/vino-preferences.desktop \
	src/fallback/virt-manager.desktop \
	src/fallback/vpnpptp.desktop \
	src/fallback/w3m.desktop \
	src/fallback/web.desktop \
	src/fallback/window-properties.desktop \
	src/fallback/wireshark.desktop \
	src/fallback/wmauda.desktop \
	src/fallback/wmbattery.desktop \
	src/fallback/wmbutton.desktop \
	src/fallback/wmcalclock.desktop \
	src/fallback/wmcdplay.desktop \
	src/fallback/wmcpu.desktop \
	src/fallback/wmcpuload.desktop \
	src/fallback/wmdate.desktop \
	src/fallback/wmdiskmon.desktop \
	src/fallback/wmfire.desktop \
	src/fallback/wmgtemp.desktop \
	src/fallback/wmifs.desktop \
	src/fallback/wmitime.desktop \
	src/fallback/wmmatrix.desktop \
	src/fallback/wmmemload.desktop \
	src/fallback/wmmon.desktop \
	src/fallback/wmmoonclock.desktop \
	src/fallback/wmmount.desktop \
	src/fallback/wmnet.desktop \
	src/fallback/wmpinboard.desktop \
	src/fallback/wmpomme.desktop \
	src/fallback/wmppp.desktop \
	src/fallback/wmpuzzle.desktop \
	src/fallback/wmrack.desktop \
	src/fallback/wmsensors.desktop \
	src/fallback/wmshutdown.desktop \
	src/fallback/wmsun.desktop \
	src/fallback/wmsysmon.desktop \
	src/fallback/wmtemp.desktop \
	src/fallback/wmtictactoe.desktop \
	src/fallback/wmtime.desktop \
	src/fallback/wmweather.desktop \
	src/fallback/wmweather+.desktop \
	src/fallback/wmwork.desktop \
	src/fallback/wpa_gui.desktop \
	src/fallback/writer.desktop \
	src/fallback/xaos.desktop \
	src/fallback/xarchiver.desktop \
	src/fallback/xbiff.desktop \
	src/fallback/xbill.desktop \
	src/fallback/xboard.desktop \
	src/fallback/xboard-(passive-chessboard).desktop \
	src/fallback/xcalc.desktop \
	src/fallback/xchat.desktop \
	src/fallback/xchat-gnome.desktop \
	src/fallback/xedit.desktop \
	src/fallback/xemacs.desktop \
	src/fallback/xev.desktop \
	src/fallback/xfburn.desktop \
	src/fallback/xfcalendar.desktop \
	src/fallback/xfig.desktop \
	src/fallback/xfishtank.desktop \
	src/fallback/xfprint.desktop \
	src/fallback/xfprint-manager.desktop \
	src/fallback/xfprint-settings.desktop \
	src/fallback/xfreecd.desktop \
	src/fallback/xine.desktop \
	src/fallback/xine-ui.desktop \
	src/fallback/xiterm.desktop \
	src/fallback/xjed.desktop \
	src/fallback/xlassie.desktop \
	src/fallback/xload.desktop \
	src/fallback/xlockmore.desktop \
	src/fallback/xlogo.desktop \
	src/fallback/xlyap.desktop \
	src/fallback/xmcd.desktop \
	src/fallback/xmix.desktop \
	src/fallback/xmixer.desktop \
	src/fallback/xmms.desktop \
	src/fallback/xpaint.desktop \
	src/fallback/xpat2.desktop \
	src/fallback/xsane.desktop \
	src/fallback/xscreensaver-properties.desktop \
	src/fallback/xsnow.desktop \
	src/fallback/xstdcmap.desktop \
	src/fallback/xsysinfo.desktop \
	src/fallback/xterm.desktop \
	src/fallback/xterm-(unicode).desktop \
	src/fallback/xv.desktop \
	src/fallback/x-window-snapshot.desktop \
	src/fallback/yelp.desktop \
	src/fallback/yudit.desktop \
	src/fallback/zenmap.desktop \
	src/fallback/zenmap-root.desktop \
	src/fallback/zeroinstall-add.desktop \
	src/fallback/zeroinstall-manage.desktop

